# absalom-command-center

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
apps/api/: main.py  requirements.txt  requirements.txtpip
apps/api/routes/: auth_routes.py  autonomy_routes.py  copilot_routes.py  execution_log_routes.py  executive_routes.py  kill_queue_routes.py  metrics_routes.py  priority_routes.py  protected_routes.py  task_routes.py  websocket_routes.py  workflow_routes.py
apps/web/: Dockerfile  package-lock.json  package.json
infrastructure/database/alembic/: env.py
infrastructure/scripts/: start-command-center.ps1
kernel/runtime/: state.py
services/agents/: autonomy_agent.py
services/ai/: client.py  copilot.py  priority_engine.py  provider.py  schemas.py
services/auth/: dependencies.py  security.py  service.py
services/auth/schemas/: auth.py  executive.py
services/config/: settings.py
services/database/: engine.py  session.py
services/execution/: executor.py
services/kill_queue/: schemas.py
services/memory/: runtime_memory.py  runtime_trace_store.py
services/observability/: logger.py
services/orchestration/: graph.py
services/schemas/: copilot.py  execution_state.py  priority.py  runtime_trace.py
services/telemetry/: logger.py  metrics_service.py
services/validation/: validator.py
services/worker/: beat_schedule.py  celery_app.py  tasks.py
tests/: test_health.py
(+42 files in other folders)
